# nicegui-fastapi-monoapp

./: README.md  pyproject.toml
basic_dashboard/: main.py
basic_dashboard/api/: app.py
basic_dashboard/frontend/: __init__.py  main.py
