[tool.poetry]
name = "basic-dashboard"
version = "0.1.0"
description = ""
authors = ["Aser Crespo <asercrespo@gmail.com>"]
readme = "README.md"
packages = [{include = "basic_dashboard"}]

[tool.poetry.dependencies]
python = "^3.10"
nicegui = "^1.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
